[package]
name = "rainr"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Ochsner <nicolas.ochsner@env.ethz.ch>"]
description = "Rainer likes dense matrix rain."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
clap = { version = "3.0.5", features = ["derive"] }
rand = "0.8.4"
ezemoji = "0.2.1"
