[package]
name = "rainr"
version = "0.1.0"
edition = "2021"
authors = ["nico <nicos.letters@gmail.com>"]
description = "Rainer likes dense matrix rain."
repository = "https://github.com/sirno/rainr"
license = "MIT"

[dependencies]
crossterm = "0.22.1"
clap = { version = "3.0.5", features = ["derive"] }
rand = "0.8.4"
ezemoji = "0.2.1"
